<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green">


    <TextView
        android:id="@+id/discoverTxt"
        android:layout_width="107dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/discover"
        android:textColor="#234E1E"
        android:textSize="22sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/discoverTxt" />

    <!--start of com.example.mauritiuswildlife.Dashboard-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="490dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/bgmenu"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_goneMarginBottom="0dp">

        <!--Start of First Line-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="16dp">


            <!--Start of Who are we-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="38dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/whoarewe" />

                    <!-- <TextView
                         android:id="@+id/whoareweTxt"
                         android:paddingLeft="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="WHO \nARE WE?"
                         android:textColor="#fff"
                         android:textSize="18sp"
                         android:clickable="true"
                         android:onClick="onClick"/> -->

                   <Button
                        android:id="@+id/whoareweTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="boxOne"
                        android:paddingLeft="20dp"
                        android:text="@string/who_are_we"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        tools:layout_editor_absoluteX="20dp"
                        tools:layout_editor_absoluteY="209dp"/>
                        <!--style="?android:attr/borderlessButtonStyle"/>-->


                </LinearLayout>

            </LinearLayout>


            <!-- Start of Our Eco tour-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="41dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/ecotours" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/our_ecotour"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <!-- Start of our Projects-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="38dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/ourprojects" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/our_projects"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--Start of Second Line-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <!--Start of how to help-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="47dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/helpus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/how_to_help"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>


            <!-- Start of Our shop-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/shop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/our_shops"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <!-- Start of contact us-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/contactus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/contact_nus"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <!--Start of Third Line-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="3"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <!--Start of follow us-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/followus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/follow_us"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>


            <!-- Start of terms and conditions-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/terms" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/terms_and_conditions"
                        android:textColor="#fff"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <!-- Start of settings-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/minibg"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="113dp"
                        android:layout_height="52dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="18dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/settings"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>